# leetcode-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: CatchAddTests.cmake
src/: CMakeLists.txt
src/L0001/: L0001.cpp  L0001.h  TestL0001.cpp
src/L0002/: L0002.cpp  L0002.h  TestL0002.cpp
src/include/: CMakeLists.txt  leetcode.h
